--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           
           <li class="dropdown"><a href="https://themewagon.github.io/Kelly/"><span>Format inspiration Site</span> </a>
             
-          <li><a href="#" onclick="openModal()">Change Log</a></li>
+          <li><a href="#" onclick="openModal()">List of changes made</a></li>
           <li> <button id="themeToggle" aria-label="Toggle dark mode" onclick="toggleTheme()">
   🌙
 </button></li>
